--- a/.tmux.conf
+++ b/.tmux.conf
@@ -33,3 +33,9 @@ set-window-option -g clock-mode-colour green #green
 
 # bell
 set-window-option -g window-status-bell-style fg=black,bg=red #base02, red
+
+# switch panes with C-b hjkl
+bind h select-pane -L
+bind j select-pane -D
+bind k select-pane -U
+bind l select-pane -R
