--- a/.tmux.conf
+++ b/.tmux.conf
@@ -3,34 +3,6 @@ set -g default-terminal "screen-256color"
 set -g mouse on
 unbind C-o
 
-#### COLOUR (Solarized dark)
-# https://github.com/seebi/tmux-colors-solarized/blob/master/tmuxcolors-dark.conf
-
-# default statusbar colors
-set-option -g status-style fg=yellow,bg=black #yellow and base02
-
-# default window title colors
-set-window-option -g window-status-style fg=brightblue,bg=default #base0 and default
-#set-window-option -g window-status-style dim
-
-# active window title colors
-set-window-option -g window-status-current-style fg=brightred,bg=default #orange and default
-#set-window-option -g window-status-current-style bright
-
-# pane border
-set-option -g pane-border-style fg=black #base02
-set-option -g pane-active-border-style fg=brightgreen #base01
-
-# message text
-set-option -g message-style fg=brightred,bg=black #orange and base01
-
-# pane number display
-set-option -g display-panes-active-colour brightred #orange
-set-option -g display-panes-colour blue #blue
-
-# clock
-set-window-option -g clock-mode-colour green #green
-
 # bell
 set-window-option -g window-status-bell-style fg=black,bg=red #base02, red
 
@@ -39,3 +11,11 @@ bind h select-pane -L
 bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
+
+# TPM (Tmux Plugin Manager)
+set -g @plugin 'tmux-plugins/tpm'
+
+# Tmux Powerline
+set -g @plugin 'erikw/tmux-powerline'
+
+run '~/.tmux/plugins/tpm/tpm'
