Remap tmux prefix from C-b to C-x.

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -3,6 +3,10 @@ set -g default-terminal "screen-256color"
 set -g mouse on
 unbind C-o
 
+# bind prefix to C-x
+unbind C-b 
+set-option -g prefix C-x
+
 # bell
 set-window-option -g window-status-bell-style fg=black,bg=red #base02, red
 
