unbind Space in .tmux.conf

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -7,6 +7,9 @@ unbind C-o
 unbind C-b 
 set-option -g prefix C-x
 
+# unbind space to not interfere with nvim leader key
+unbind Space
+
 # bell
 set-window-option -g window-status-bell-style fg=black,bg=red #base02, red
 
