--- a/.tmux.conf
+++ b/.tmux.conf
@@ -19,6 +19,12 @@ bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
 
+# copy mode
+#unbind c
+#bind -n c copy-mode
+setw -g mode-keys vi
+bind-key -T copy-mode-vi y send-keys -X copy-selection
+
 # TPM (Tmux Plugin Manager)
 set -g @plugin 'tmux-plugins/tpm'
 
@@ -26,3 +32,4 @@ set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'erikw/tmux-powerline'
 
 run '~/.tmux/plugins/tpm/tpm'
+
