--- a/.tmux.conf
+++ b/.tmux.conf
@@ -20,10 +20,14 @@ bind k select-pane -U
 bind l select-pane -R
 
 # copy mode
-#unbind c
-#bind -n c copy-mode
+unbind c
+bind c copy-mode
 setw -g mode-keys vi
 bind-key -T copy-mode-vi y send-keys -X copy-selection
+
+# paste
+unbind v
+bind v paste-buffer
 
 # TPM (Tmux Plugin Manager)
 set -g @plugin 'tmux-plugins/tpm'
