--- a/.tmux.conf
+++ b/.tmux.conf
@@ -19,6 +19,17 @@ bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
 
+# resize panes
+unbind Up
+unbind Down
+unbind Left
+unbind Right
+
+bind C-Up resize-pane -U 2
+bind C-Down resize-pane -D 2
+bind C-Left resize-pane -L 2
+bind C-Right resize-pane -R 2
+
 # copy mode
 unbind c
 bind c copy-mode
