Added tmux command for windows (not sure if it actually works).

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -40,6 +40,10 @@ bind-key -T copy-mode-vi y send-keys -X copy-selection
 unbind v
 bind v paste-buffer
 
+# tabs
+unbind t
+bind t new-window -c "#{pane_current_path}"
+
 # TPM (Tmux Plugin Manager)
 set -g @plugin 'tmux-plugins/tpm'
 
