added Alt-X as secondary prefix key for tmux.

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -6,6 +6,7 @@ unbind C-o
 # bind prefix to C-x
 unbind C-b 
 set-option -g prefix C-x
+set-option -g prefix2 ≈
 
 # unbind space to not interfere with nvim leader key
 unbind Space
