Added tmux buffer increase (apparently not working).

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -45,6 +45,9 @@ bind v paste-buffer
 unbind t
 bind t new-window -c "#{pane_current_path}"
 
+# scroll back buffer
+set-option -g history-limit 5000
+
 # TPM (Tmux Plugin Manager)
 set -g @plugin 'tmux-plugins/tpm'
 
