tried to mat rightalt - q to @ however this does not work properly :(

--- a/etc/keyd/default.conf
+++ b/etc/keyd/default.conf
@@ -5,6 +5,7 @@
 [main]
 
 capslock = layer(nav)
+rightalt = layer(altgr)
 
 [nav]
 
@@ -12,3 +13,7 @@ h = left
 k = up
 j = down
 l = right
+
+[altgr]
+
+q = macro(@)
